--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   This is an awesome site. Know that this is going to change the world. Just you wait.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "https://him2him2.github.io/" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  him2him2
 
