--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: The Awesome Site
+title: The Awesome Site2
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   This is an awesome site. Know that this is going to change the world. Just you wait.
